<resources>
    <string name="app_name">Dog API client</string>

    <string name="start_hint">Push the button to get a random dog</string>
    <string name="start_hint_breed">Push the button to get a random dog</string>
    <string name="start_typing_hint">Type here…</string>
    <string name="get_random">Get random dog</string>
    <string name="get_random_photo_by_breed">Get random dog by breed</string>
    <string name="user_list_header">For query \"%1$s\" found %2$d results</string>
    <string name="back_button">To start</string>
    <string name="list_button">Other sub-breeds</string>
    <string name="breed_name">Some breed</string>
</resources>
