<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/offset_8dp"
    tools:context=".presentation.start.StartActivity">

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_hint"
        android:layout_marginTop="@dimen/offset_32dp"
        app:layout_constraintBottom_toTopOf="@+id/bRandom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHint" />

    <TextView
        android:id="@+id/tvHintBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_hint_breed"
        android:layout_marginTop="@dimen/offset_32dp"
        android:textSize="@dimen/offset_16dp"
        app:layout_constraintTop_toBottomOf="@id/bRandom"
        app:layout_constraintBottom_toTopOf="@+id/etBreed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="71dp" />

    <EditText
        android:id="@+id/etBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start_typing_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHintBreed"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bByBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/get_random_photo_by_breed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBreed" />

</androidx.constraintlayout.widget.ConstraintLayout>